# capstone_s2_ws

./: README.md
firmware/4DOF_robot_arm_ver1/src/: main.cpp
firmware/Motor_test/: single_motor_test.ino
src/all_in_one_package/launch/: all_in_one_launch.py  generate_map.launch.py
src/amr/description/: amr_description.urdf
src/amr_cartographer/config/: amr.lua
src/amr_cartographer/launch/: amr_cartographer.launch.py
src/amr_cartographer/map/: non_merger_2f.pgm
src/amr_navigator/map/: ekf_map.pgm  ekf_map.yaml  non_merger_2f.pgm  non_merger_2f.yaml  test_ekf_map.pgm  test_ekf_map.yaml
src/amr_navigator/params/: nav2_params.yaml
src/ebimu_pkg/: package.xml  setup.py
src/ebimu_pkg/config/: ekf.yaml
src/ebimu_pkg/ebimu_pkg/: ebimu_publisher.py  ebimu_subscriber.py
src/ebimu_pkg/launch/: ebimu_ekf.launch.py
src/manipulator/description/: capstone_manipulator.urdf.xacro  capstone_manipulator_gazebo.urdf.xacro
src/manipulator/launch/: capstone_arm_display.launch.py  gazebo.launch.py
src/manipulator_moveit/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  manipulator.ros2_control.xacro  manipulator.srdf  manipulator.urdf.xacro  ros2_controllers.yaml
src/manipulator_moveit/launch/: move_group.launch.py  move_group.launch_origin.py  moveit_core.launch.py  moveit_rviz.launch.py
src/manipulator_moveit/rviz/: test.rviz
src/ros2_laser_scan_merger/config/: params.yaml
src/serial_test/serial_test/: manipulator_driver.py  motor_driver.py  test_node_main.py
src/tts_speaker/: setup.py
src/tts_speaker/launch/: speaker.launch.py
(+3 files in other folders)
